[project]
name = "logs-anomaly-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Maamoun.Sondes"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "faker (>=36.1.1,<37.0.0)"
]

[tool.poetry]
packages = [{include = "logs"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
